// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > renders correctly with a footer 1`] = `
.c4 {
  display: flex;
}

.c6 {
  display: flex;
}

.c9 {
  display: flex;
}

.c10 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
}

.c10 svg {
  width: 100%;
  height: 100%;
}

.c8 {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  position: absolute;
  z-index: 999;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.c1 {
  position: fixed;
  background: #292924;
  cursor: pointer;
  opacity: 0.4;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.c2 {
  display: flex;
  flex-direction: column;
  background: #fbf8f5;
  box-sizing: border-box;
  border-radius: 16px;
  width: 100%;
  max-width: 600px;
  position: fixed;
  max-height: calc(100vh - 64px);
  overflow: hidden;
  outline: none;
  transition: all 0.3s ease-in-out;
}

.c3 {
  flex: 1;
  min-height: 0;
  overflow-y: auto;
  overscroll-behavior-y: none;
}

.c5 {
  padding: 24px 16px 24px;
  background: #fbf8f5;
}

.c11 {
  padding: 0 16px 0;
}

.c12 {
  display: flex;
  gap: 8px;
  padding: 16px 16px 24px;
  background: #fbf8f5;
}

.c12>* {
  flex: 1;
}

.c7 {
  align-self: center;
}

.c13 {
  position: relative;
  background-color: #ff88c8;
  box-shadow: none;
  color: #292924;
  padding: 0 20px;
  outline: none;
  border-radius: 10000px;
  font-weight: 500;
  cursor: pointer;
  line-height: 100%;
  font-size: 16px;
  opacity: 1;
  width: auto;
  background-color: #dad2c4;
}

.c13:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c13:hover {
  background-color: #beb4a0;
}

.c13:active {
  background-color: #9d927b;
}

.c16 {
  position: relative;
  background-color: #ff88c8;
  box-shadow: none;
  color: #292924;
  padding: 0 20px;
  outline: none;
  border-radius: 10000px;
  font-weight: 500;
  cursor: pointer;
  line-height: 100%;
  font-size: 16px;
  opacity: 1;
  width: auto;
}

.c16:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c16:hover {
  background-color: #f759a9;
}

.c16:active {
  background-color: #e43e93;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
}

.c15 {
  padding: 16px 0;
  flex-grow: 1;
}

@media (min-width: 0px) {
  .c4 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c4 {
    align-items: flex-start;
  }
}

@media (min-width: 0px) {
  .c6 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c9 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c9 {
    gap: 8px;
  }
}

@media (max-width: 768px) {
  .c2 {
    max-width: none;
    border-radius: 16px 16px 0px 0px;
    max-height: 90vh;
    position: fixed;
    right: 0;
    left: 0;
    bottom: 0;
  }
}

<body
  style="top: 0px; padding-right: 1024px; overflow: hidden;"
>
  <div />
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      aria-labelledby="_r_6_"
      aria-modal="true"
      class="c2"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          <div
            class="c6 c7"
          >
            <h2
              class="c8"
              cursor="inherit"
              id="_r_6_"
              title=""
            >
              Modal Title
            </h2>
          </div>
          <div
            class="c9"
          >
            <button
              class="c10"
              role="button"
              style="background: rgb(218, 210, 196); border-radius: 100%; padding: 6px; border: medium; cursor: pointer;"
              title="Close modal"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark"
                color="#292924"
                data-icon="xmark"
                data-prefix="far"
                role="img"
                viewBox="0 0 384 512"
              >
                <path
                  d="M7.5 105c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l151 151 151-151c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-151 151 151 151c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-151-151-151 151c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l151-151-151-151z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="c6 c11"
        >
          <div>
            Modal Content ...
          </div>
        </div>
        <div
          class="c12"
        >
          <button
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15 childrenContainer"
              >
                Find out more
              </div>
            </div>
          </button>
          <button
            class="c16"
          >
            <div
              class="c14"
            >
              <div
                class="c15 childrenContainer"
              >
                Got it
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal > renders correctly with a sticky footer 1`] = `
.c4 {
  display: flex;
}

.c6 {
  display: flex;
}

.c9 {
  display: flex;
}

.c10 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
}

.c10 svg {
  width: 100%;
  height: 100%;
}

.c8 {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  position: absolute;
  z-index: 999;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.c1 {
  position: fixed;
  background: #292924;
  cursor: pointer;
  opacity: 0.4;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.c2 {
  display: flex;
  flex-direction: column;
  background: #fbf8f5;
  box-sizing: border-box;
  border-radius: 16px;
  width: 100%;
  max-width: 600px;
  position: fixed;
  max-height: calc(100vh - 64px);
  overflow: hidden;
  outline: none;
  transition: all 0.3s ease-in-out;
}

.c3 {
  flex: 1;
  min-height: 0;
  overflow-y: auto;
  overscroll-behavior-y: none;
}

.c5 {
  padding: 24px 16px 24px;
  background: #fbf8f5;
}

.c11 {
  padding: 0 16px 0;
}

.c12 {
  display: flex;
  gap: 8px;
  padding: 16px 16px 24px;
  background: #fbf8f5;
  position: sticky;
  bottom: 0;
  z-index: 1;
}

.c12>* {
  flex: 1;
}

.c7 {
  align-self: center;
}

.c13 {
  position: relative;
  background-color: #ff88c8;
  box-shadow: none;
  color: #292924;
  padding: 0 20px;
  outline: none;
  border-radius: 10000px;
  font-weight: 500;
  cursor: pointer;
  line-height: 100%;
  font-size: 16px;
  opacity: 1;
  width: auto;
}

.c13:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c13:hover {
  background-color: #f759a9;
}

.c13:active {
  background-color: #e43e93;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
}

.c15 {
  padding: 16px 0;
  flex-grow: 1;
}

@media (min-width: 0px) {
  .c4 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c4 {
    align-items: flex-start;
  }
}

@media (min-width: 0px) {
  .c6 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c9 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c9 {
    gap: 8px;
  }
}

@media (max-width: 768px) {
  .c2 {
    max-width: none;
    border-radius: 16px 16px 0px 0px;
    max-height: 90vh;
    position: fixed;
    right: 0;
    left: 0;
    bottom: 0;
  }
}

<body
  style="top: 0px; padding-right: 1024px; overflow: hidden;"
>
  <div />
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      aria-labelledby="_r_9_"
      aria-modal="true"
      class="c2"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          <div
            class="c6 c7"
          >
            <h2
              class="c8"
              cursor="inherit"
              id="_r_9_"
              title=""
            >
              Modal Title
            </h2>
          </div>
          <div
            class="c9"
          >
            <button
              class="c10"
              role="button"
              style="background: rgb(218, 210, 196); border-radius: 100%; padding: 6px; border: medium; cursor: pointer;"
              title="Close modal"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark"
                color="#292924"
                data-icon="xmark"
                data-prefix="far"
                role="img"
                viewBox="0 0 384 512"
              >
                <path
                  d="M7.5 105c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l151 151 151-151c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-151 151 151 151c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-151-151-151 151c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l151-151-151-151z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="c6 c11"
        >
          <div>
            Modal Content ...
          </div>
        </div>
        <div
          class="c12"
        >
          <button
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15 childrenContainer"
              >
                Got it
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal > renders correctly with default props 1`] = `
.c4 {
  display: flex;
}

.c6 {
  display: flex;
}

.c9 {
  display: flex;
}

.c10 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
}

.c10 svg {
  width: 100%;
  height: 100%;
}

.c8 {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  position: absolute;
  z-index: 999;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.c1 {
  position: fixed;
  background: #292924;
  cursor: pointer;
  opacity: 0.4;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.c2 {
  display: flex;
  flex-direction: column;
  background: #fbf8f5;
  box-sizing: border-box;
  border-radius: 16px;
  width: 100%;
  max-width: 600px;
  position: fixed;
  max-height: calc(100vh - 64px);
  overflow: hidden;
  outline: none;
  transition: all 0.3s ease-in-out;
}

.c3 {
  flex: 1;
  min-height: 0;
  overflow-y: auto;
  overscroll-behavior-y: none;
}

.c5 {
  padding: 24px 16px 24px;
  background: #fbf8f5;
}

.c11 {
  padding: 0 16px 24px;
}

.c7 {
  align-self: center;
}

@media (min-width: 0px) {
  .c4 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c4 {
    align-items: flex-start;
  }
}

@media (min-width: 0px) {
  .c6 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c9 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c9 {
    gap: 8px;
  }
}

@media (max-width: 768px) {
  .c2 {
    max-width: none;
    border-radius: 16px 16px 0px 0px;
    max-height: 90vh;
    position: fixed;
    right: 0;
    left: 0;
    bottom: 0;
  }
}

<body
  style="padding-right: 1024px; overflow: hidden; top: 0px;"
>
  <div />
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      aria-labelledby="_r_0_"
      aria-modal="true"
      class="c2"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          <div
            class="c6 c7"
          >
            <h2
              class="c8"
              cursor="inherit"
              id="_r_0_"
              title=""
            >
              Modal Title
            </h2>
          </div>
          <div
            class="c9"
          >
            <button
              class="c10"
              role="button"
              style="background: rgb(218, 210, 196); border-radius: 100%; padding: 6px; border: medium; cursor: pointer;"
              title="Close modal"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark"
                color="#292924"
                data-icon="xmark"
                data-prefix="far"
                role="img"
                viewBox="0 0 384 512"
              >
                <path
                  d="M7.5 105c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l151 151 151-151c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-151 151 151 151c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-151-151-151 151c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l151-151-151-151z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="c6 c11"
        >
          <div>
            Modal Content ...
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal > renders correctly with sticky header 1`] = `
.c4 {
  display: flex;
}

.c6 {
  display: flex;
}

.c9 {
  display: flex;
}

.c10 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
}

.c10 svg {
  width: 100%;
  height: 100%;
}

.c8 {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  position: absolute;
  z-index: 999;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.c1 {
  position: fixed;
  background: #292924;
  cursor: pointer;
  opacity: 0.4;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.c2 {
  display: flex;
  flex-direction: column;
  background: #fbf8f5;
  box-sizing: border-box;
  border-radius: 16px;
  width: 100%;
  max-width: 600px;
  position: fixed;
  max-height: calc(100vh - 64px);
  overflow: hidden;
  outline: none;
  transition: all 0.3s ease-in-out;
}

.c3 {
  flex: 1;
  min-height: 0;
  overflow-y: auto;
  overscroll-behavior-y: none;
}

.c5 {
  padding: 24px 16px 24px;
  background: #fbf8f5;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c11 {
  padding: 0 16px 24px;
}

.c7 {
  align-self: center;
}

@media (min-width: 0px) {
  .c4 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c4 {
    align-items: flex-start;
  }
}

@media (min-width: 0px) {
  .c6 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c9 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c9 {
    gap: 8px;
  }
}

@media (max-width: 768px) {
  .c2 {
    max-width: none;
    border-radius: 16px 16px 0px 0px;
    max-height: 90vh;
    position: fixed;
    right: 0;
    left: 0;
    bottom: 0;
  }
}

<body
  style="top: 0px; padding-right: 1024px; overflow: hidden;"
>
  <div />
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      aria-labelledby="_r_3_"
      aria-modal="true"
      class="c2"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          <div
            class="c6 c7"
          >
            <h2
              class="c8"
              cursor="inherit"
              id="_r_3_"
              title=""
            >
              Modal Title
            </h2>
          </div>
          <div
            class="c9"
          >
            <button
              class="c10"
              role="button"
              style="background: rgb(218, 210, 196); border-radius: 100%; padding: 6px; border: medium; cursor: pointer;"
              title="Close modal"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark"
                color="#292924"
                data-icon="xmark"
                data-prefix="far"
                role="img"
                viewBox="0 0 384 512"
              >
                <path
                  d="M7.5 105c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l151 151 151-151c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-151 151 151 151c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-151-151-151 151c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l151-151-151-151z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="c6 c11"
        >
          <div>
            Modal Content ...
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
